--- a/index.html
+++ b/index.html
@@ -5,28 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+<style>
+  body {
+    background: black;
+  }
+    h2{
+      color: antiquewhite;
+      font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    }
+    p {
+      color: antiquewhite;
+      font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    }
+</style>
 
     <title>About</title>
 </head>
 <body>
     <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #0e7c73; font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif; ">
                     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="true" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
-                    <a class="navbar-brand" href="#!">Carl Robinson Jr.</a>
+                    <a class="navbar-brand" href="#!" style="color: antiquewhite">Carl Robinson Jr. </a>
                   
                     <div class="navbar-collapse collapse show" id="navbarTogglerDemo02" >
                       <ul class="navbar-nav mr-auto mt-2 mt-md-0">
                         <li class="nav-item active">
-                          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                          <a class="nav-link" href="index.html" style="color: antiquewhite">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="portfolio.html">Portfolio</a>
+                          <a class="nav-link" href="portfolio.html" style="color: antiquewhite">Portfolio</a>
                         </li>
                         <li class="nav-item">
-                                <a class="nav-link" href="contact.html">Contact</a>
+                                <a class="nav-link" href="contact.html" style="color: antiquewhite">Contact</a>
                               </li>
                       </ul>
                     </div>
@@ -35,7 +47,7 @@
     </header>
     <div class="container">
       
-        <div class="jumbotron">
+        <div class="jumbotron" style="background:lightseagreen">
             <H2>
                 About Me
               </H2>
