--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel:400&display=swap" rel="stylesheet">
+
+
+
 <style>
   body {
     background: black;
@@ -14,8 +18,9 @@
       font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     }
     p {
-      color: antiquewhite;
-      font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+      color: rgb(245, 238, 229);
+      font-family: 'Cinzel', serif;
+      letter-spacing: 2px;
     }
 </style>
 
