updated color of hr

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
       font-family: 'Cinzel', serif;
       letter-spacing: 2px;
     }
+    hr {
+      color: antiquewhite;
+      background-color: antiquewhite
+    }
 </style>
 
     <title>About</title>
