--- a/contact.html
+++ b/contact.html
@@ -5,45 +5,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+<style>
+  body {
+    background: black;
+  }
+  h2 {
+      color: antiquewhite;
+      font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+      text-align: center;
+  }
+  hr {
+    background-color: antiquewhite;
+    }
+  form {
+    color: antiquewhite;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  }
+  </style>
 
     <title>Contact</title>
 </head>
     <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-9 pr-0">
+            <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #0e7c73; font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif; height: 125px;">
                     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="true" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
-                    <a class="navbar-brand" href="#!">Carl Robinson Jr.</a>
-                  
+                    <a class="navbar-brand" href="#!" style="color: antiquewhite; font-size: 25px">Carl Robinson Jr.</a>
+                  </div>
+                  <div class="col-3 " style="background: #0e7c73; text-align: right">
                     <div class="navbar-collapse collapse show" id="navbarTogglerDemo02" >
                       <ul class="navbar-nav mr-auto mt-2 mt-md-0">
                         <li class="nav-item active">
-                          <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
+                          <a class="nav-link" href="contact.html"style="color: antiquewhite">Contact <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="portfolio.html">Portfolio</a>
+                          <a class="nav-link" href="portfolio.html"style="color: antiquewhite">Portfolio</a>
                         </li>
                         <li class="nav-item">
-                                <a class="nav-link" href="index.html">Home</a>
+                                <a class="nav-link" href="index.html"style="color: antiquewhite">Home</a>
                               </li>
                       </ul>
+                      </div>
+                      </div>
+                    </div>
                     </div>
                   </nav>
                   
     </header>
+  </div>
 <body>
     <div class="container ">`
       <div class="row ">
-        <div class="col-12 text-center">
-      <h2>
-        Contact
-      </h2>
+        <div class="col-12 text-center background-color: lightseagreen">
+      <!-- <h2> -->
+        <!-- Contact -->
+      <!-- </h2> -->
       </div>
     </div>
       <div class="row justify-content-center">
       <div class="col-8">
-        <div class="jumbotron">
+        <div class="jumbotron" style="background-color: lightseagreen">
+          <h2>
+              Contact
+          </h2>
+          <hr>
             <form>
             <div class="form-group">
               <label for="name">Your Name</label>
@@ -51,14 +79,14 @@
               <small id="name" class="form-text text-muted"></small>
             </div>
             <div class="form-group">
-              <label for="Email Address">Email Addres</label>
+              <label for="Email Address">Email Address</label>
               <input type="Email Address" class="form-control" id="Email Address" placeholder="Email Address">
             </div>
             <div class="form-group">
                 <label for="exampleFormControlTextarea1">Message</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
               </div>
-                   <button type="submit" class="btn btn-primary">Submit</button>
+                   <button type="submit" class="btn" style="background-color: rgb(173, 221, 219); color: rgb(80, 75, 68)">Submit</button>
           </form>
 
         </div>
