--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     h2{
       color: antiquewhite;
       font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+      text-align: center;
     }
     p {
       color: rgb(245, 238, 229);
