added nav bar to container, updated background color and font color on navbar

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,27 +10,28 @@
     <title>Portfolio</title>
 </head>
     <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #0e7c73; font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif; height: 125px">
                     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="true" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
-                    <a class="navbar-brand" href="#!">Carl Robinson Jr.</a>
+                    <a class="navbar-brand" href="#!" style="color: antiquewhite; font-size: 25px">Carl Robinson Jr.</a>
                   
-                    <div class="navbar-collapse collapse show" id="navbarTogglerDemo02" style="">
+                    <div class="navbar-collapse collapse show" id="navbarTogglerDemo02">
                       <ul class="navbar-nav mr-auto mt-2 mt-md-0">
                         <li class="nav-item active">
-                          <a class="nav-link" href="portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
+                          <a class="nav-link" href="portfolio.html" style="color: antiquewhite">Portfolio<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="index.html">Home</a>
+                          <a class="nav-link" href="index.html" style="color: antiquewhite">Home</a>
                         </li>
                         <li class="nav-item">
-                                <a class="nav-link" href="contact.html">Contact</a>
+                                <a class="nav-link" href="contact.html" style="color: antiquewhite">Contact</a>
                               </li>
                       </ul>
                     </div>
                   </nav>
-                  
+                </div>
     </header>
 <body>
     <div class="container">
