--- a/portfolio.html
+++ b/portfolio.html
@@ -11,12 +11,15 @@
 </head>
     <header>
       <div class="container-fluid">
+        <div class="row">
+            <div class="col-9 pr-0">
             <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #0e7c73; font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif; height: 125px">
                     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="true" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
                     <a class="navbar-brand" href="#!" style="color: antiquewhite; font-size: 25px">Carl Robinson Jr.</a>
-                  
+                  </div> 
+                  <div class="col-3 " style="background: #0e7c73; text-align: right">     
                     <div class="navbar-collapse collapse show" id="navbarTogglerDemo02">
                       <ul class="navbar-nav mr-auto mt-2 mt-md-0">
                         <li class="nav-item active">
@@ -30,6 +33,8 @@
                               </li>
                       </ul>
                     </div>
+                    </div>
+                  </div>
                   </nav>
                 </div>
     </header>
