added break btwn header and jumbotron, chng jubomtron color, move h2 header into jumbotron

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,15 +38,17 @@
                   </nav>
                 </div>
     </header>
+    <br>
 <body>
     <div class="container">
         <div class="row ">
             <div class="col-12 text-center">
-          <h2>
-            Portfolio
-          </h2>
+
           </div>
-      <div class="jumbotron">
+      <div class="jumbotron" style="background:lightseagreen">
+          <h2>
+              Portfolio
+            </h2>
       <div class="row">
         <div class="col-3">
             <div class="card" style="width: 14rem;">
