--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,21 @@
 
 
     <title>Portfolio</title>
+    <style>
+    body{
+      background-color: black;
+
+    }
+    h2{
+      color: antiquewhite;
+      font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+      text-align: center;
+    }
+    hr {
+      color: antiquewhite;
+      background-color: antiquewhite;
+    }
+    </style>
 </head>
     <header>
       <div class="container-fluid">
@@ -49,6 +64,7 @@
           <h2>
               Portfolio
             </h2>
+            <hr>
       <div class="row">
         <div class="col-3">
             <div class="card" style="width: 14rem;">
