--- a/portfolio.html
+++ b/portfolio.html
@@ -1,158 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 
-    <title>Portfolio</title>
-    <style>
-    body{
+  <title>Portfolio</title>
+  <style>
+    body {
       background-color: black;
 
     }
-    h2{
+
+    h2 {
       color: antiquewhite;
       font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
       text-align: center;
     }
+
     hr {
       color: antiquewhite;
       background-color: antiquewhite;
     }
-    </style>
+    .card {
+      margin: 0 auto;
+      width: 300px;
+    }
+  </style>
 </head>
-    <header>
-      <div class="container-fluid">
-        <div class="row">
-            <div class="col-9 pr-0">
-            <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #0e7c73; font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif; height: 125px">
-                    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="true" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <a class="navbar-brand" href="#!" style="color: antiquewhite; font-size: 25px">Carl Robinson Jr.</a>
-                  </div> 
-                  <div class="col-3 " style="background: #0e7c73; text-align: right">     
-                    <div class="navbar-collapse collapse show" id="navbarTogglerDemo02">
-                      <ul class="navbar-nav mr-auto mt-2 mt-md-0">
-                        <li class="nav-item active">
-                          <a class="nav-link" href="portfolio.html" style="color: antiquewhite">Portfolio<span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="index.html" style="color: antiquewhite">Home</a>
-                        </li>
-                        <li class="nav-item">
-                                <a class="nav-link" href="contact.html" style="color: antiquewhite">Contact</a>
-                              </li>
-                      </ul>
-                    </div>
-                    </div>
-                  </div>
-                  </nav>
-                </div>
-    </header>
-    <br>
+
+
 <body>
-    <div class="container">
-        <div class="row ">
-            <div class="col-12 text-center">
-
-          </div>
-      <div class="jumbotron" style="background:lightseagreen">
-          <h2>
-              Portfolio
-            </h2>
-            <hr>
+  <header>
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-3">
-            <div class="card" style="width: 14rem;">
-                <img src="assets/images/portfolioholder 2.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-        </div>
-        <div class="col-3">
-            <div class="card" style="width: 14rem;">
-                <img src="assets/images/portfolioholder 2.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
+        <div class="col-9 pr-0">
+          <nav class="navbar navbar-expand-lg navbar-light"
+            style="background-color: #0e7c73; font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif; height: 125px">
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+              data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="true"
+              aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" href="#!" style="color: antiquewhite; font-size: 25px">Carl Robinson Jr.</a>
+        <!-- </div>
+        <div class="col-3 " style="background: #0e7c73; text-align: right"> -->
+          <div class="navbar-collapse collapse show" id="navbarTogglerDemo02">
+            <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+              <li class="nav-item active">
+                <a class="nav-link" href="portfolio.html" style="color: antiquewhite">Portfolio<span
+                    class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="index.html" style="color: antiquewhite">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html" style="color: antiquewhite">Contact</a>
+              </li>
+            </ul>
           </div>
-          <div class="col-3">
-              <div class="card" style="width: 14rem;">
-                  <img src="assets/images/portfolioholder 2.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                  </div>
-                </div>
-            </div>
-            <div class="col-3">
-                <div class="card" style="width: 14rem;">
-                    <img src="assets/images/portfolioholder 2.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                  </div>
+        </div>
+      </div>
+      </nav>
+    </div>
+  </header>
+  <br>
+
+  <div class="container-fluidx">
+    <div class="row text-center ">
+      <div class="col-md-12">
+     
+      <div class="jumbotron" style="background:lightseagreen">
+        <h2>
+          Portfolio
+        </h2>
+        <hr>
+        <div class="row ">
+          <div class="col-sm-6 col-md-4">
+            <div class="card" style="width: 14rem;">
+              <img src="assets/images/portfolioholder 2.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                  card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
               </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="card" style="width: 14rem;">
+              <img src="assets/images/portfolioholder 2.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                  card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="card" style="width: 14rem;">
+              <img src="assets/images/portfolioholder 2.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                  card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="col-sm-6 col-md-4">
+            <div class="card" style="width: 14rem;">
+              <img src="assets/images/portfolioholder 2.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                  card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div> -->
+
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-sm-6 col-md-4">
+            <div class="card" style="width: 14rem;">
+              <img src="assets/images/portfolioholder 2.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                  card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="card" style="width: 14rem;">
+              <img src="assets/images/portfolioholder 2.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                  card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="card" style="width: 14rem;">
+              <img src="assets/images/portfolioholder 2.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                  card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="col-sm-6 col-md-4">
+            <div class="card" style="width: 14rem;">
+              <img src="assets/images/portfolioholder 2.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                  card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div> -->
+
+        </div>
 
       </div>
-      <br>
-            <div class="row">
-        <div class="col-3">
-            <div class="card" style="width: 14rem;">
-                <img src="assets/images/portfolioholder 2.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-        </div>
-        <div class="col-3">
-            <div class="card" style="width: 14rem;">
-                <img src="assets/images/portfolioholder 2.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-          </div>
-          <div class="col-3">
-              <div class="card" style="width: 14rem;">
-                  <img src="assets/images/portfolioholder 2.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                  </div>
-                </div>
-            </div>
-            <div class="col-3">
-                <div class="card" style="width: 14rem;">
-                    <img src="assets/images/portfolioholder 2.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                  </div>
-              </div>
-
-      </div>
-
+    </div>
     </div>
   </div>
 
@@ -176,8 +200,15 @@
 
 
 
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
