--- a/contact.html
+++ b/contact.html
@@ -1,81 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<style>
-  body {
-    background: black;
-  }
-  h2 {
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <style>
+    body {
+      background: black;
+    }
+
+    h2 {
       color: antiquewhite;
       font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
       text-align: center;
-  }
-  hr {
-    background-color: antiquewhite;
     }
-  form {
-    color: antiquewhite;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-  }
-  </style>
 
-    <title>Contact</title>
+    hr {
+      background-color: antiquewhite;
+    }
+
+    form {
+      color: antiquewhite;
+      font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    }
+    a {
+      color: antiquewhite;
+
+    }
+
+    a:hover {
+      color: yellowgreen
+    }
+  </style>
+  <title>Contact</title>
 </head>
-    <header>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-9 pr-0">
-            <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #0e7c73; font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif; height: 125px;">
-                    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="true" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <a class="navbar-brand" href="#!" style="color: antiquewhite; font-size: 25px">Carl Robinson Jr.</a>
-                  </div>
-                  <div class="col-3 " style="background: #0e7c73; text-align: right">
-                    <div class="navbar-collapse collapse show" id="navbarTogglerDemo02" >
-                      <ul class="navbar-nav mr-auto mt-2 mt-md-0">
-                        <li class="nav-item active">
-                          <a class="nav-link" href="contact.html"style="color: antiquewhite">Contact <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="portfolio.html"style="color: antiquewhite">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                                <a class="nav-link" href="index.html"style="color: antiquewhite">Home</a>
-                              </li>
-                      </ul>
-                      </div>
-                      </div>
-                    </div>
-                    </div>
-                  </nav>
-                  
-    </header>
-  </div>
 <body>
-    <div class="container ">`
-      <div class="row ">
-        <div class="col-12 text-center background-color: lightseagreen">
-      <!-- <h2> -->
-        <!-- Contact -->
-      <!-- </h2> -->
+  <header>
+    <nav class="navbar navbar-expand-lg" style="background-color:#0e7c73; font-family: Arial, Helvetica Neue, Helvetica, sans-serif; ">
+      <div class="d-flex flex-grow-1">
+        <span class="w-100 d-lg-none d-block">
+          <!-- hidden spacer to center brand on mobile --></span>
+        <a class="navbar-brand" href="#" style="font-size: 25px">
+          Carl Robinson Jr.
+        </a>
+        <div class="w-100 text-right">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar7">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
       </div>
-    </div>
-      <div class="row justify-content-center">
+      <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar7">
+        <ul class="navbar-nav ml-auto flex-nowrap">
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="portfolio.html" class="nav-link">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a href="contact.html" class="nav-link">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <br>
+        <div class="row justify-content-center">
       <div class="col-8">
         <div class="jumbotron" style="background-color: lightseagreen">
           <h2>
-              Contact
+            Contact
           </h2>
           <hr>
-            <form>
+          <form>
             <div class="form-group">
               <label for="name">Your Name</label>
-              <input type="name" class="form-control" id="exampleInputEmail1" aria-describedby="name" placeholder="Enter Name">
+              <input type="name" class="form-control" id="exampleInputEmail1" aria-describedby="name"
+                placeholder="Enter Name">
               <small id="name" class="form-text text-muted"></small>
             </div>
             <div class="form-group">
@@ -83,18 +87,16 @@
               <input type="Email Address" class="form-control" id="Email Address" placeholder="Email Address">
             </div>
             <div class="form-group">
-                <label for="exampleFormControlTextarea1">Message</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-              </div>
-                   <button type="submit" class="btn" style="background-color: rgb(173, 221, 219); color: rgb(80, 75, 68)">Submit</button>
+              <label for="exampleFormControlTextarea1">Message</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+            <button type="submit" class="btn"
+              style="background-color: rgb(173, 221, 219); color: rgb(80, 75, 68)">Submit</button>
           </form>
-
         </div>
-
       </div>
-
     </div>
-    </div>
+  </div>
 
 
 
@@ -117,8 +119,15 @@
 
 
 
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
