updated footers on all pages

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
 
 
 
-
-      <footer class="blockquote-footer">
+<hr>
+      <footer class="blockquote-footer" style="color: antiquewhite; font-size: 15px">
 
         Someone famous in <cite title="Source Title">Source Title</cite>
 
