--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,7 @@
       color: antiquewhite;
       font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     }
+
     a {
       color: antiquewhite;
 
@@ -34,12 +35,15 @@
     a:hover {
       color: yellowgreen
     }
+
   </style>
   <title>Contact</title>
 </head>
+
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg" style="background-color:#0e7c73; font-family: Arial, Helvetica Neue, Helvetica, sans-serif; ">
+    <nav class="navbar navbar-expand-lg"
+      style="background-color:#0e7c73; font-family: Arial, Helvetica Neue, Helvetica, sans-serif; ">
       <div class="d-flex flex-grow-1">
         <span class="w-100 d-lg-none d-block">
           <!-- hidden spacer to center brand on mobile --></span>
@@ -68,37 +72,42 @@
     </nav>
   </header>
   <br>
-        <div class="row justify-content-center">
-      <div class="col-8">
-        <div class="jumbotron" style="background-color: lightseagreen">
-          <h2>
-            Contact
-          </h2>
-          <hr>
-          <form>
-            <div class="form-group">
-              <label for="name">Your Name</label>
-              <input type="name" class="form-control" id="exampleInputEmail1" aria-describedby="name"
-                placeholder="Enter Name">
-              <small id="name" class="form-text text-muted"></small>
-            </div>
-            <div class="form-group">
-              <label for="Email Address">Email Address</label>
-              <input type="Email Address" class="form-control" id="Email Address" placeholder="Email Address">
-            </div>
-            <div class="form-group">
-              <label for="exampleFormControlTextarea1">Message</label>
-              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-            </div>
-            <button type="submit" class="btn"
-              style="background-color: rgb(173, 221, 219); color: rgb(80, 75, 68)">Submit</button>
-          </form>
-        </div>
+  <div class="row justify-content-center">
+    <div class="col-8">
+      <div class="jumbotron" style="background-color: lightseagreen">
+        <h2>
+          Contact
+        </h2>
+        <hr>
+        <form>
+          <div class="form-group">
+            <label for="name">Your Name</label>
+            <input type="name" class="form-control" id="exampleInputEmail1" aria-describedby="name"
+              placeholder="Enter Name">
+            <small id="name" class="form-text text-muted"></small>
+          </div>
+          <div class="form-group">
+            <label for="Email Address">Email Address</label>
+            <input type="Email Address" class="form-control" id="Email Address" placeholder="Email Address">
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlTextarea1">Message</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+          <button type="submit" class="btn"
+            style="background-color: rgb(173, 221, 219); color: rgb(80, 75, 68)">Submit</button>
+        </form>
+        <br>
+        <hr>
+        <footer class="blockquote-footer" style="color: antiquewhite; font-size: 15px">
+
+            Someone famous in <cite title="Source Title">Source Title</cite>
+      
+          </footer>
       </div>
     </div>
   </div>
-
-
+  </div>
 
 
 
