--- a/portfolio.html
+++ b/portfolio.html
@@ -151,6 +151,13 @@
                 </div>
               </div>
             </div>
+            <br>
+            <hr>
+            <footer class="blockquote-footer" style="color: antiquewhite; font-size: 15px; text-align: justify">
+
+                Someone famous in <cite title="Source Title">Source Title</cite>
+        
+              </footer>
           </div>
         </div>
       </div>
