updated card title

--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,7 @@
                 <div class="card" style="width: 14rem;">
                   <img src="assets/images/3rd eye.jpg" class="card-img-top" width="200" height="200">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Psychic Game</h5>
                     <p class="card-text">Are you Psychic....!!?.</p>
                     <a href="https://ceedamann.github.io/Psychic-Game/" class="btn btn-primary">Psychic Game</a>
                   </div>
