updated unit 4 game card style

--- a/portfolio.html
+++ b/portfolio.html
@@ -94,9 +94,10 @@
               <div class="col-sm-6 col-md-4">
                 <div class="card" style="width: 14rem;">
                   <img src="assets/images/diamond.png" class="card-img-top" width="200" height="200">
+                  <!-- <hr style="background: #0e7c73"> -->
                   <div class="card-body">
                     <h5 class="card-title">Unit-4-Game</h5>
-                    <p class="card-text">Crystal Collector</p>
+                    <!-- <p class="card-text">Crystal Collector</p> -->
                     <a href="https://ceedamann.github.io/Unit-4-Game/" class="btn btn-primary">Crystal Collector</a>
                   </div>
                 </div>
