added link to trivia game

--- a/portfolio.html
+++ b/portfolio.html
@@ -108,7 +108,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Trivia Game</h5>
                     <p class="card-text">How Well Do You Know The Walking Dead.</p>
-                    <a href="#" class="btn btn-primary">Walking Dead Trivia</a>
+                    <a href="https://ceedamann.github.io/TriviaGame/" class="btn btn-primary">Walking Dead Trivia</a>
                   </div>
                 </div>
               </div>
