updated unit 4 game card

--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,7 @@
                   <!-- <hr style="background: #0e7c73"> -->
                   <div class="card-body">
                     <h5 class="card-title">Unit-4-Game</h5>
-                    <!-- <p class="card-text">Crystal Collector</p> -->
+                    <p class="card-text">Crystal Collector</p>
                     <a href="https://ceedamann.github.io/Unit-4-Game/" class="btn btn-primary">Crystal Collector</a>
                   </div>
                 </div>
