updated portfolio w/firebase example

--- a/portfolio.html
+++ b/portfolio.html
@@ -120,19 +120,18 @@
                   <img src="assets/images/Giftastic.gif" class="card-img-top" width="200" height="200">
                   <div class="card-body">
                     <h5 class="card-title">GifTastic</h5>
-                    <p class="card-text">Looking for something to brighten your day.</p>
+                    <p class="card-text">Looking for something to brighten your day. Example of using Ajax Requests..</p>
                     <a href="https://ceedamann.github.io/GifTastic/" class="btn btn-primary">GifTastic</a>
                   </div>
                 </div>
               </div>
               <div class="col-sm-6 col-md-4">
                 <div class="card" style="width: 14rem;">
-                  <img src="assets/images/portfolioholder 2.jpg" class="card-img-top" width="200" height="200">
+                  <img src="assets/images/firebase.jfif" class="card-img-top" width="200" height="200">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                      card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">When's the next train</h5>
+                    <p class="card-text">Keep a schedule of trains. Example of using a database(Firebase)</p>
+                    <a href="https://ceedamann.github.io/Firebase/" class="btn btn-primary">Scheduler</a>
                   </div>
                 </div>
               </div>
