updated portolio and added images

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="https://kit.fontawesome.com/2823f235a8.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -28,6 +29,8 @@
 
     .card {
       margin: 0 auto;
+      margin-bottom: 40px;
+      
       width: 300px;
     }
 
@@ -77,7 +80,9 @@
         <div class="col-md-12">
           <div class="jumbotron" style="background:lightseagreen">
             <h2>
-              Portfolio
+              Portfolio <a
+              href="https://github.com/Ceedamann">  <i
+              class="fab fa-github"></i></a>
             </h2>
             <hr>
             <div class="row ">
@@ -137,15 +142,45 @@
               </div>
               <div class="col-sm-6 col-md-4">
                 <div class="card" style="width: 14rem;">
-                  <img src="assets/images/portfolioholder 2.jpg" class="card-img-top" width="200" height="200">
+                  <img src="assets/images/homepage.png" class="card-img-top" width="200" height="200">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                      card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">MVO</h5>
+                    <p class="card-text">Imagine being able to plan out your next vacation or adventure all in one place, no travel agent needed. Now you can! With My Vacation Optimizer!</p>
+                    <a href="https://mateusandre1.github.io/My-Vacation-Optimizer/" class="btn btn-primary">MVO</a>
                   </div>
                 </div>
               </div>
+              <div class="col-sm-6 col-md-4">
+                <div class="card" style="width: 14rem;">
+                  <img src="assets/images/vgcollage.jpg" class="card-img-top" width="200" height="200">
+                  <div class="card-body">
+                    <h5 class="card-title">gAmerZ Index</h5>
+                    <p class="card-text">An app with a database of over 16000 popular games.
+                      After creating an account you can search for games you own and add them to your collection.</p>
+                    <a href="https://dbworld.herokuapp.com" class="btn btn-primary">gAmerZ</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4">
+                <div class="card" style="width: 14rem;">
+                  <img src="assets/images/home.jpg" class="card-img-top" width="200" height="200">
+                  <div class="card-body">
+                    <h5 class="card-title">Friend Finder</h5>
+                    <p class="card-text">This full-stack site will take in results from users surveys.</p>
+                    <a href="https://polar-stream-64285.herokuapp.com/" class="btn btn-primary">Friend Finder</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4">
+                <div class="card" style="width: 14rem;">
+                  <img src="assets/images/burgerTime.jpg" class="card-img-top" width="200" height="200">
+                  <div class="card-body">
+                    <h5 class="card-title">Burger-Time</h5>
+                    <p class="card-text"> A burger logger with MySQL, Node, Express, Handlebars and a homemade ORM (yum!).</p>
+                    <a href="https://fast-mountain-22416.herokuapp.com/" class="btn btn-primary"><i class="fas fa-hamburger"></i></a>
+                  </div>
+                </div>
+              </div>              
             </div>
             <br>
             <hr>
